--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>For Dhani ❤️</title>
+    <title>For Emiko ❤️</title>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -169,7 +169,7 @@
     <div id="heart-container"></div>
 
     <div id="ui-wrapper">
-        <h1>Dhani, Will You Be My Valentine?</h1>
+        <h1>Will you be my Valentine, Garima?</h1>
         <div class="btn-container">
             <button id="yesBtn" class="btn" onclick="start()">Yes</button>
             <button id="noBtn" class="btn" onmouseover="dodge()">No</button>
@@ -183,14 +183,14 @@
         <div class="envelope"></div>
         <div class="letter-paper" id="paper">
             <div class="letter-content" id="text">
-                <p>To Dhani,</p>
+                <p>To Garima,</p>
                 <br>
                 <p style="font-size: 2rem; color: var(--deep-red);">Thanks, cutie!</p>
                 <p style="font-family: 'Poppins'; font-size: 0.85rem; margin: 15px 0; color: #666;">
-                    "You really made my day"
+                    "I truly love you from the bottom of my heart, thanks for making my day❤️"
                 </p>
                 <br>
-                <p style="text-align: right; width: 100%;">Yours Truly,Krishna❤️</p>
+                <p style="text-align: right; width: 100%;">Yours Truly,Golu❤️</p>
             </div>
         </div>
     </div>
@@ -266,4 +266,5 @@
         createBackgroundHearts();
     </script>
 </body>
+
 </html>
