--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     "I truly love you from the bottom of my heart, thanks for making my day❤️"
                 </p>
                 <br>
-                <p style="text-align: right; width: 100%;">Yours Truly,Golu❤️</p>
+                <p style="text-align: right; width: 100%;">Yours Truly,Rajat❤️</p>
             </div>
         </div>
     </div>
@@ -268,3 +268,4 @@
 </body>
 
 </html>
+
